--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.2",
     "@astrojs/check": "^0.5.7",
+    "@astrojs/react": "^3.1.0",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "astro": "^4.5.2",
+    "react": "^18.2.0",
+    "react-cookienotice": "^6.0.3",
+    "react-dom": "^18.2.0",
     "typescript": "^5.4.2"
   }
 }
