--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.7",
+    "@astrojs/mdx": "^2.2.2",
     "@astrojs/react": "^3.1.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "aos": "^3.0.0-beta.6",
     "astro": "^4.5.2",
     "react": "^18.2.0",
-    "react-cookienotice": "^6.0.3",
     "react-dom": "^18.2.0",
+    "stylelint": "^16.3.1",
     "typescript": "^5.4.2"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.7"
   }
 }
